@@ -47,9 +47,6 @@ View the quota of another user.
 .SH "FILES"
 /etc/quota.conf
 .SH "CAVEATS"
-Any user can query the NFS quota of another user, but only root
-can query the Lustre quota of another user.
-.LP
 Group quotas are not supported.
 .SH "SEE ALSO"
 quota.conf(5), repquota(1)
