@@ -47,10 +47,7 @@ Suppress printing of the initial heading in the report.
 loads a configuration file other than the default (see FILES below).
 .SH "FILES"
 /etc/quota.conf
-.SH "BUGS"
-Any user can generate the quota report for NFS file systems.
-Only root can generate the quota report for Lustre file systems.
-.LP
+.SH "CAVEATS"
 Group quotas are not supported.
 .SH "SEE ALSO"
 quota.conf(5), quota(1)
